--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <h1 class="text-white text-center">Lloyd Stallebrass</h1>
+        <h1 class="text-white text-center">FirstName LastName</h1>
       </div>
     </div>
     <div class="row">
