--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
   <div class="container">
-    <div class="row">
+    <div class="row" id="header">
       <div class="col-sm-6">
         <h1 class="text-white text-center">FirstName LastName</h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row" id="main1">
       <ul class="nav nav-pills mb-3 col-sm-6" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="pills-first-tab" data-toggle="pill" href="#pills-first" role="tab" aria-controls="pills-first" aria-selected="true">First</a>
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </div>
-    <div class="row">
+    <div class="row" id="main2">
       <div class="tab-content col-sm-6" id="pills-tabContent">
         <div class="tab-pane fade show active text-white" id="pills-first" role="tabpanel" aria-labelledby="pills-first-tab">First - Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt nostrud.</div>
         <div class="tab-pane fade text-white" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt nostrud.</div>
