--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <div class="container">
     <div class="row" id="header">
-      <div class="col-lg-6">
+      <div class="col-xl-6">
         <h1 class="text-white text-center">FirstName LastName</h1>
       </div>
     </div>
     <div class="row" id="main1">
-      <ul class="nav nav-pills mb-3 col-lg-6" id="pills-tab" role="tablist">
+      <ul class="nav nav-pills mb-3 col-xl-6" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="pills-first-tab" data-toggle="pill" href="#pills-first" role="tab" aria-controls="pills-first" aria-selected="true">First</a>
         </li>
@@ -37,7 +37,7 @@
       </ul>
     </div>
     <div class="row" id="main2">
-      <div class="tab-content col-lg-6" id="pills-tabContent">
+      <div class="tab-content col-xl-6" id="pills-tabContent">
         <div class="tab-pane fade show active text-white" id="pills-first" role="tabpanel" aria-labelledby="pills-first-tab">First - Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt nostrud.</div>
         <div class="tab-pane fade text-white" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt nostrud.</div>
         <div class="tab-pane fade text-white" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">Ad pariatur nostrud pariatur exercitation ipsum ipsum culpa mollit commodo mollit ex. Aute sunt incididunt amet commodo est sint nisi deserunt pariatur do. Aliquip ex eiusmod voluptate exercitation cillum id incididunt elit sunt. Qui minim sit magna Lorem id et dolore velit Lorem amet exercitation duis deserunt. Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.</div>
