--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="tab-pane fade show active text-white" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
           <p>student of codecademy</p>
           <p>currently studying front-end engineering</p>
-          <p>languages: HTML, CSS, Javascript, Python</p>
+          <p>languages: HTML, CSS, JavaScript, Python</p>
           <p>frameworks: Bootstrap, React</p>
         </div>
         <div class="tab-pane fade text-white" id="pills-interests" role="tabpanel" aria-labelledby="pills-interests-tab">
