--- a/index.html
+++ b/index.html
@@ -1,65 +1,30 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="./portfolio.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-  <title>Portfolio</title>
-</head>
-
-<body>
-  <div class="container">
-    <div class="row" id="header">
-      <div class="col-xl-6">
-        <h1 class="text-white text-center">stwrpr</h1>
+  <head>
+    <title>stwrpr</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="reset.css" type="text/css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="index.css" type="text/css" rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="section one">
+      <h1>stwrpr</h1>
+    </div>
+    <div class="section two">
+      <div class="container">
+        <h2>about</h2>
+        <p>student of codecademy</p>
+        <p>languages: html, css, javascript, python</p>
+        <p>frameworks: bootstrap, react</p>
       </div>
     </div>
-    <div class="row" id="main1">
-      <ul class="nav nav-pills mb-3 col-xl-6" id="pills-tab" role="tablist">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active" id="pills-about-tab" data-toggle="pill" href="#pills-about" role="tab" aria-controls="pills-about" aria-selected="true">about</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-interests-tab" data-toggle="pill" href="#pills-interests" role="tab" aria-controls="pills-interests" aria-selected="true">interests</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-projects-tab" data-toggle="pill" href="#pills-projects" role="tab" aria-controls="pills-projects" aria-selected="false">projects</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-links-tab" data-toggle="pill" href="#pills-links" role="tab" aria-controls="pills-links" aria-selected="false">links</a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="true">contact</a>
-        </li>
-      </ul>
+    <div class="section three">
+      <h2>projects</h2>
     </div>
-    <div class="row" id="main2">
-      <div class="tab-content col-xl-6" id="pills-tabContent">
-        <div class="tab-pane fade show active text-white" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
-          <p>student of codecademy</p>
-          <p>currently studying front-end engineering</p>
-          <p>languages: HTML, CSS, JavaScript, Python</p>
-          <p>frameworks: Bootstrap, React</p>
-        </div>
-        <div class="tab-pane fade text-white" id="pills-interests" role="tabpanel" aria-labelledby="pills-interests-tab">
-          <p>front-end web development</p>
-          <p>film, literature, music, painting</p>
-          <p>surrealism, constructivism, brutalism</p>
-          <p>politics, economics, history, psychology</p>
-          <p>golf, football, american football, ice hockey</p>
-        </div>
-        <div class="tab-pane fade text-white" id="pills-projects" role="tabpanel" aria-labelledby="pills-projects-tab">Ad pariatur nostrud pariatur exercitation ipsum ipsum culpa mollit commodo mollit ex. Aute sunt incididunt amet commodo est sint nisi deserunt pariatur do. Aliquip ex eiusmod voluptate exercitation cillum id incididunt elit sunt. Qui minim sit magna Lorem id et dolore velit Lorem amet exercitation duis deserunt. Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.</div>
-        <div class="tab-pane fade text-white" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">Est quis nulla laborum officia ad nisi ex nostrud culpa Lorem excepteur aliquip dolor aliqua irure ex. Nulla ut duis ipsum nisi elit fugiat commodo sunt reprehenderit laborum veniam eu veniam. Eiusmod minim exercitation fugiat irure ex labore incididunt do fugiat commodo aliquip sit id deserunt reprehenderit aliquip nostrud. Amet ex cupidatat excepteur aute veniam incididunt mollit cupidatat esse irure officia elit do ipsum ullamco Lorem. Ullamco ut ad minim do mollit labore ipsum laboris ipsum commodo sunt tempor enim incididunt. Commodo quis sunt dolore aliquip aute tempor irure magna enim minim reprehenderit. Ullamco consectetur culpa veniam sint cillum aliqua incididunt velit ullamco sunt ullamco quis quis commodo voluptate. Mollit nulla nostrud adipisicing aliqua cupidatat aliqua pariatur mollit voluptate voluptate consequat non.</div>
-        <div class="tab-pane fade text-white" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">Last - Est quis nulla laborum officia ad nisi ex nostrud culpa Lorem excepteur aliquip dolor aliqua irure ex. Nulla ut duis ipsum nisi elit fugiat commodo sunt reprehenderit laborum veniam eu veniam. Eiusmod minim exercitation fugiat irure ex labore incididunt do fugiat commodo aliquip sit id deserunt reprehenderit aliquip nostrud. Amet ex cupidatat excepteur aute veniam incididunt mollit cupidatat esse irure officia elit do ipsum ullamco Lorem. Ullamco ut ad minim do mollit labore ipsum laboris ipsum commodo sunt tempor enim incididunt. Commodo quis sunt dolore aliquip aute tempor irure magna enim minim reprehenderit. Ullamco consectetur culpa veniam sint cillum aliqua incididunt velit ullamco sunt ullamco quis quis commodo voluptate. Mollit nulla nostrud adipisicing aliqua cupidatat aliqua pariatur mollit voluptate voluptate consequat non.</div>
-      </div>
+    <div class="section four">
+      <h2>links</h2>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
